# Elastosynth

./: GeneratePhantomManually.m  README.md  TestClinicalGenerator.m  TestFEMInterface.m  TestOneByOne.m  TestPairGeneration.m  TestPhantomGeneration.m  TestProceduralPhantomGeneration.m  TestSingle.m
Elastosynth Src/: AddHeterogeneity.m  AddPhantomHeterogeneity.m  BatchFEMRun.m  BatchPairGeneration.m  BoundaryConditions.m  ConfigureFEM.m  FEMOpts.m  FEMRun.m  FiniteElementResult.m  GenerateClinicalPhantom.m  GeneratePhantom.m  GeneratePhantomParameterTable.m  GenerateProceduralPhantom.m  GenerateRFLinearArray.m  GenerateRandomInclusionLocations.m  ImageOpts.m  ImageToScatterers.m  Material.m  Phantom.m  PolarFunctionToROI.m  ProceduralParameters.m  RFCellToMat.m  ROIToPolarFunction.m  RunFiniteElementAnalysis.m  Transducer.m  flatten.m
FEM Interface Windows/: FEM_Interfacemeta_rc.rc  FEM_Interfacemeta_res.res
FEM Src/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  Elements.cpp  Elements.h  FEM_Interface.cpp  FEM_Interface.h  FiniteElementModel.cpp  FiniteElementModel.h  FiniteElementResult.cpp  FiniteElementResult.h  Material.cpp  Material.h  MatrixGeneration.cpp  MatrixGeneration.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h
Models/: Generative_PCA.mat
